--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -43,6 +43,14 @@
     <string name="adaptive_playback_timeout_10_min">10 minutes</string>
     <string name="adaptive_playback_timeout_10_min_summary">On (10 minutes)</string>
 
+    <!-- Back gesture height -->
+    <string name="back_height_category">Back gesture height</string>
+    <string name="back_height_low_label">Full</string>
+    <string name="back_height_high_label">Bottom</string>
+    <string name="back_options_dialog_title">Options</string>
+    <string name="back_height_title">Back height</string>
+    <string name="back_height_message">Amount of screen height used as a touchable region for back gesture</string>
+
     <!-- Three-fingers-swipe to screenshot -->
     <string name="three_finger_gesture">Swipe to screenshot</string>
     <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
