Settings: Add window ignore secure feature [2/2]  - Move it to privacy settings
Feature: yt/KSCOPE-23
Change-Id: Ibdd7406a3e59373813c9a98233e6c04b8554d618
Signed-off-by: Karan Parashar <whyredfire@gmail.com>
[ghostrider-reborn: improve strings]
Signed-off-by: Adithya R <gh0strider.2k18.reborn@gmail.com>
Signed-off-by: Richard Raya <rdxzv.dev@gmail.com>

--- a/res/values/aospa_strings.xml
+++ b/res/values/aospa_strings.xml
@@ -257,6 +257,10 @@
     <string name="heads_up_summary">Show select notifications as a banner across the top of the screen</string>
     <string name="heads_up_off">Heads up is disabled globally</string>
 
+    <!-- Ignore window secure -->
+    <string name="ignore_window_secure_title">Ignore window secure flags</string>
+    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
+
     <!-- Network traffic -->
     <string name="network_traffic_title">Network traffic indicator</string>
     <string name="network_traffic_summary">Show real-time internet speed in status bar</string>
